--- a/README
+++ b/README
@@ -14,5 +14,5 @@ The Django server name is: 'jokes_jokes' and any api should be under that dir in
 
 May 23th:
 i) POST/GET rest api with Header and Body -> dynamic html for example
-ii) work with heritage -> packages for each api
+ii) work with inheritance -> packages for each api
 iii) docker
